# openapi.yaml
@@ -1470,6 +1470,8 @@ components:
     WorksheetCreateRequest:
       type: object
       required:
+        - notes
+        - defectsId
         - toolId
         - isWarranty
         - hasWarrantyCard
@@ -1478,6 +1480,15 @@ components:
         - status
         - assignee
       properties:
+        notes:
+          type: array
+          items:
+            $ref: '#/components/schemas/WorksheetNote'
+        defectIds:
+          type: array
+          description: A hibák azonosítói
+          items:
+            type: integer
         toolId:
           type: integer
           description: A gép azonosítója
